--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,6 +18,7 @@
         <th:block layout:fragment="contents-body" >
             <section class="content">
                 <!--여기다가 메인 화면 코딩-->
+                안녕하세요 한글이 입니다.
             </section>
         </th:block>
     </div><!-- contents //-->
