--- a/src/main/resources/templates/layout/include-js.html
+++ b/src/main/resources/templates/layout/include-js.html
@@ -4,11 +4,6 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <th:block th:fragment="js">
-
-<!--    <link rel="stylesheet" th:href="@{/css/reset.css}">
-    <link rel="stylesheet" th:href="@{/css/jquery-ui.css}">
-    <link rel="stylesheet" th:href="@{/css/jquery-ui.theme.css}">
-    <link rel="stylesheet" th:href="@{/css/layout.css}">-->
     <!-- jQuery -->
     <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
     <!-- jQuery UI 1.11.4 -->
@@ -38,11 +33,10 @@
     <!-- overlayScrollbars -->
     <script th:src="@{/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js}"></script>
     <!-- AdminLTE App -->
-    <script th:src="@{/dist/js/adminlte.js}"></script>
+    <script th:src="@{/js/adminlte.js}"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script th:src="@{/dist/js/pages/dashboard.js}"></script>
+    <script th:src="@{/js/pages/dashboard.js}"></script>
     <!-- AdminLTE for demo purposes -->
-    <script th:src="@{/dist/js/demo.js}"></script>
-
+    <script th:src="@{/js/demo.js}"></script>
 </th:block>
 </html>
